<resources>
    <string name="app_name">봉사꾼</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_category">Search Category</string>
    <string name="action_category_undo">Search Category Undo</string>

    <string name="title_activity_info_page">InfoPageActivity</string>

    <!--infoPage-->
    <string name="voluntary_application">신청하기</string>
    <string name="voluntary_cancel">신청취소</string>

    <string name="mainInfo_title">주요 정보</string>
    <string name="mainInfo_recruitmentPeriod_title">모집 기간</string>
    <string name="mainInfo_voluntary_time_title">봉사 시간</string>
    <string name="mainInfo_voluntary_dDay_title">D-DAY</string>
    <string name="mainInfo_voluntary_location_title">활동지역</string>
    <string name="mainInfo_voluntary_auth_title">인증서발급</string>

    <string name="detailInfo_title">세부 내용</string>
    <string name="detailInfo_details_title">상세내용</string>
    <string name="detailInfo_voluntaryPeriod_title">활동 기간</string>
    <string name="detailInfo_supportCondition_title">지원 가능 조건</string>
    <string name="detailInfo_contact_title">담장자 연락처</string>
    <string name="detailInfo_email_title">담장자 이메일</string>
    <string name="detailInfo_address_title">활동지역</string>
    <string name="detailInfo_contentEtc_title">기타사항</string>

    <string name="poster_title">포스터</string>

    <!-- CalendarFragment-->
    <string name="calendar_empty">Empty</string>

    <!-- ZzimFragment-->
    <string name="zzim_checkin">선택됨</string>
    <string name="zzim_checkout">선택 안함</string>
    <string name="zzim_voluntary">찜한 봉사활동</string>
    <string name="zzim_check_all">전체선택</string>

    <!-- MyPageFragment-->
    <string name="myPage_activity_time">활동시간</string>
    <string name="myPage_voluntary_list">나의 봉사목록</string>
    <string name="myPage_voluntary_zzim">찜한 봉사활동</string>
    <string name="myPage_webSite">웹페이지</string>
    <string name="myPage_inquire">문의하기</string>
    <string name="myPage_evaluation">평가하기</string>
    <string name="myPage_aboutAs">팀 소개</string>
    <string name="myPage_settings">설정</string>
    <string name="myPage_login">로그인</string>
    <string name="myPage_logout">로그아웃</string>

    <!-- SearchCategoryActivity-->
    <string name="search_category">종류</string>
    <string name="search_location">지역</string>
    <string name="search_school">학교</string>
    <string name="search_time">시간</string>
    <string name="search_start">검색 시작</string>
    <string name="search_category_init">조건 초기화</string>
    <string name="search_empty">Empty</string>

    <string name="search_hint">검색어를 입력하세요</string>

    <!-- NavigationView-->
    <string name="navigation_view_logout">로그아웃</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">bongsaggun.j2ffrey_2.io</string>
    <string name="content_authority">io.j2ffrey_2.bongsaggun.app</string>


    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_search_main">SearchMainActivity</string>
    <string name="title_activity_search_category">SearchCategoryActivity</string>




</resources>
