<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.MyPageFragment">

    <RelativeLayout
        android:id="@+id/my_page_profile_container"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/app_theme">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="Jeffery Lee"
            android:visibility="gone"/>

        <com.pkmmte.view.CircularImageView
        android:layout_centerInParent="true"
        android:id="@+id/imageView_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/img_logo_white_200x120dp"
        app:border="true"
        app:border_color="#EEEEEE"
        app:border_width="4dp"
        app:shadow="true"/>

        <!--<ImageView-->
        <!--android:id="@+id/imageView_profile"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_above="@id/textView_name"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:src="@mipmap/ic_launcher"/>-->

        <TextView
            android:id="@+id/textView_activity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:text="@string/myPage_activity_time"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView_activity_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_activity_text"
            android:layout_centerHorizontal="true"
            android:text="32"
            android:textColor="@color/myPage"
            android:textSize="20sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView_activity_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textView_activity_Time"
            android:layout_toRightOf="@id/textView_activity_Time"
            android:text="H"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_my_page_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:showDividers="middle|end">

        <RelativeLayout
            android:id="@+id/container_login"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/myPage_login"/>

            <ImageView
                android:id="@+id/imageView_login"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_24dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_myVoluntaryList"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/myPage_voluntary_list"/>

            <ImageView
                android:id="@+id/imageView_myVoluntaryList"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_24dp"/>

            <TextView
                android:id="@+id/textView_myVoluntary_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/imageView_myVoluntaryList"
                android:text="2건"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_zzimList"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/myPage_voluntary_zzim"/>

            <ImageView
                android:id="@+id/imageView_zzimList"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_24dp"/>

            <TextView
                android:id="@+id/textView_zzim_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/imageView_zzimList"
                android:text="2건"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_webSite"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/myPage_webSite"/>

            <ImageView
                android:id="@+id/imageView_webSite"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_24dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_inquire"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/myPage_inquire"/>

            <ImageView
                android:id="@+id/imageView_inquire"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_24dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_evaluation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/myPage_evaluation"/>

            <ImageView
                android:id="@+id/imageView_evaluation"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_24dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_aboutAs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/myPage_aboutAs"/>

            <ImageView
                android:id="@+id/imageView_aboutAs"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_24dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/myPage_settings"/>

            <ImageView
                android:id="@+id/imageView_settings"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_expand_24dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

